--- a/p8105_hw6_rc3179.md
+++ b/p8105_hw6_rc3179.md
@@ -215,3 +215,113 @@ weather_df =
     ## file last updated:  2019-10-14 01:14:10
 
     ## file min/max dates: 1869-01-01 / 2019-10-31
+
+``` r
+simple_model = lm(tmax ~ tmin, data = weather_df)
+simple_model %>% broom::glance() %>% select(r.squared) %>% pull(1)
+```
+
+    ## [1] 0.9115425
+
+``` r
+temp = simple_model %>% broom::tidy() %>% select(estimate) %>% pull(1)
+log(temp[1] * temp[2])
+```
+
+    ## [1] 2.013752
+
+``` r
+set.seed(1)
+
+weather_results = 
+  weather_df %>% 
+  select(tmin, tmax) %>% 
+  bootstrap(n = 5000) %>% 
+  mutate(
+    models = map(strap, ~lm(tmax ~ tmin, data = .x)),
+    tidy_results = map(models, broom::tidy),
+    glance_results = map(models, broom::glance)
+  ) 
+
+r_squares = weather_results %>% 
+  select(glance_results) %>% 
+  unnest(glance_results) %>% 
+  select(r.squared) 
+
+betas = weather_results %>% 
+  select(tidy_results) %>% 
+  unnest(tidy_results) %>% 
+  select(estimate) %>% 
+  pull(1)
+
+log_vals = numeric(length(betas)/2)
+
+for (i in seq(1, length(betas), 2)) {
+  #print(i)
+  #print(log_vals[(i+1)%/%2])
+  log_vals[(i+1)/2] = log(betas[i] * betas[i+1])
+  #print(log(betas[i] * betas[i+1]))
+  #print(log_vals[(i+1)/2])
+  #break
+}
+```
+
+R-squared distribution and 95% CI. The distribution is largely normal
+with a very slight left skew. Median is at 0.9118 with a 95% CI of
+(0.8937,
+0.9271)
+
+``` r
+r_squares %>% ggplot(aes(x = r.squared)) + geom_density()
+```
+
+<img src="p8105_hw6_rc3179_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+
+``` r
+summary(r_squares)
+```
+
+    ##    r.squared     
+    ##  Min.   :0.8739  
+    ##  1st Qu.:0.9057  
+    ##  Median :0.9118  
+    ##  Mean   :0.9113  
+    ##  3rd Qu.:0.9171  
+    ##  Max.   :0.9373
+
+``` r
+r_squares %>% pull(1) %>% quantile(c(.025, .975))
+```
+
+    ##      2.5%     97.5% 
+    ## 0.8936684 0.9271060
+
+Log of B0 and B1 distribution and 95% CI. The distribution is largely
+normal with the median equal to the mean. Median (and mean) is at 2.013
+with a 95% CI of (1.965, 2.059)
+
+``` r
+log_vals = as_tibble(log_vals)
+log_vals %>% ggplot(aes(x = value)) + geom_density()
+```
+
+<img src="p8105_hw6_rc3179_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+``` r
+summary(log_vals)
+```
+
+    ##      value      
+    ##  Min.   :1.922  
+    ##  1st Qu.:1.997  
+    ##  Median :2.013  
+    ##  Mean   :2.013  
+    ##  3rd Qu.:2.030  
+    ##  Max.   :2.102
+
+``` r
+log_vals %>% pull(1) %>% quantile(c(.025, .975))
+```
+
+    ##     2.5%    97.5% 
+    ## 1.964949 2.058887
